# G-Visualizer

./: README.md  main.html  main.js  package-lock.json  package.json
.github/workflows/: build-exe.yml  build.yml  release.yml
jsmol/: JSmol.min.nojq.js
jsmol/j2s/core/: corejmol.js  corejmoldebug.js  corejsv.js
jsmol/js/: JSmol.full.nojq.js
public/jsmol/j2s/core/: corejmoljsv.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.github/workflows/: release.yml
src-tauri/icons/: icon.icns
