[package]
name = "g-visualizer"
version = "1.0.0"
description = "G-Visualizer App"
authors = ["RyokoKuga"]
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = [ "shell-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]